--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pdfkit": "^0.17.1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
