Fix: Configuration DB avec variables d'environnement

--- a/SERVER/.env
+++ b/SERVER/.env
@@ -3,3 +3,5 @@ DB_USER=bamba        # ou ton vrai utilisateur MySQL
 DB_PASSWORD=12345678         # ton mot de passe (vide si aucun)
 DB_HOST=localhost
 JWT_SECRET=une_chaine_secrete
+MAIL_USER=tonadresse@gmail.com
+MAIL_PASS=tonmotdepasseoumotdepasseapp
